load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "command",
    srcs = ["command.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/command",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api/command",
        "//go/pkg/digest",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_golang_glog//:glog",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "command_test",
    srcs = ["command_test.go"],
    embed = [":command"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@org_golang_google_protobuf//proto",
    ],
)
