load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "contextmd",
    srcs = ["contextmd.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/contextmd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_pborman_uuid//:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "contextmd_test",
    srcs = ["contextmd_test.go"],
    embed = [":contextmd"],
)
