load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "contextmd",
    srcs = ["contextmd.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/contextmd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_golang_glog//:glog",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "contextmd_test",
    srcs = ["contextmd_test.go"],
    embed = [":contextmd"],
)
