load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "credshelper",
    srcs = ["credshelper.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/credshelper",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/digest",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//credentials/oauth",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_test(
    name = "credshelper_test",
    srcs = ["credshelper_test.go"],
    embed = [":credshelper"],
)
