load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "digest",
    srcs = ["digest.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/digest",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "digest_test",
    srcs = ["digest_test.go"],
    embed = [":digest"],
    deps = ["@org_golang_google_protobuf//proto:go_default_library"],
)
