load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "diskcache",
    srcs = [
        "diskcache.go",
        "sys_darwin.go",
        "sys_linux.go",
        "sys_windows.go",
    ],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/diskcache",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/digest",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "diskcache_test",
    srcs = ["diskcache_test.go"],
    embed = [":diskcache"],
    deps = [
        "//go/pkg/digest",
        "//go/pkg/testutil",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_pborman_uuid//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
