load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "fakes",
    srcs = [
        "ac.go",
        "cas.go",
        "exec.go",
        "logstreams.go",
        "server.go",
    ],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/fakes",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/chunker",
        "//go/pkg/client",
        "//go/pkg/command",
        "//go/pkg/digest",
        "//go/pkg/filemetadata",
        "//go/pkg/rexec",
        "//go/pkg/uploadinfo",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_klauspost_compress//zstd:go_default_library",
        "@com_github_pborman_uuid//:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/known/anypb:go_default_library",
        "@org_golang_google_protobuf//types/known/durationpb:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)
