load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "fakes",
    srcs = [
        "ac.go",
        "cas.go",
        "exec.go",
        "logstreams.go",
        "server.go",
    ],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/fakes",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/chunker",
        "//go/pkg/client",
        "//go/pkg/command",
        "//go/pkg/digest",
        "//go/pkg/fakes/auxpb",
        "//go/pkg/filemetadata",
        "//go/pkg/rexec",
        "//go/pkg/uploadinfo",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_google_uuid//:uuid",
        "@com_github_klauspost_compress//zstd",
        "@org_golang_google_genproto//googleapis/longrunning",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
