load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "filemetadata.go",
    ],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/filemetadata",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/cache:go_default_library",
        "//go/pkg/digest:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cache_posix_test.go",
        "cache_test.go",
        "filemetadata_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/pkg/digest:go_default_library",
        "//go/pkg/testutil:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)
