load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "flags",
    srcs = ["flags.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/flags",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/balancer",
        "//go/pkg/client",
        "//go/pkg/moreflag",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//keepalive:go_default_library",
    ],
)
