load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "flags",
    srcs = ["flags.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/flags",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/client",
        "//go/pkg/credshelper",
        "//go/pkg/moreflag",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//keepalive",
    ],
)

alias(
    name = "go_default_library",
    actual = ":flags",
    visibility = ["//visibility:public"],
)
