load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "moreflag",
    srcs = ["moreflag.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/moreflag",
    visibility = ["//visibility:public"],
)

go_test(
    name = "moreflag_test",
    srcs = ["moreflag_test.go"],
    embed = [":moreflag"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
