load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "outerr",
    srcs = ["outerr.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/outerr",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_glog//:glog"],
)

go_test(
    name = "outerr_test",
    srcs = ["outerr_test.go"],
    embed = [":outerr"],
)
