load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "portpicker",
    srcs = ["portpicker.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/portpicker",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":portpicker",
    visibility = ["//visibility:public"],
)
